Add basic ml5js project (other files affected by commit are Unix linebreaks or something)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <li>
       <a href="/snake/index.html">Snake</a>
     </li>
+
+    <li>
+      <a href="/ml5/index.html">ml5js</a>
+    </li>
   </ul>
 </body>
 </html>
