Add grid flag site

--- a/parcel-site/index.html
+++ b/parcel-site/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fqph.fs.quoracdn.net%2Fmain-qimg-4623467bd63c285526b042d85044803b&f=1&nofb=1" />
+  <link rel="shortcut icon"
+    href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fqph.fs.quoracdn.net%2Fmain-qimg-4623467bd63c285526b042d85044803b&f=1&nofb=1" />
   <link rel="stylesheet" href="./style.css" />
   <title>Pog</title>
 </head>
+
 <body>
   <ul>
     <li>
@@ -15,6 +18,11 @@
     <li>
       <a href="/ml5/index.html">ml5js</a>
     </li>
+
+    <li>
+      <a href="/grid-things/index.html">Grid things</a>
+    </li>
   </ul>
 </body>
+
 </html>
