--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Portfolio | Projects</title>
 
-  <link rel="stylesheet" href="./index.scss">
+  <link rel="stylesheet" href="./assets/style/index.scss">
 </head>
 
 <body>
@@ -15,16 +15,13 @@
   <section class="section columns p-4">
     <div id="sidebar-container" class="column is-2"></div>
 
-    <div class="column">
-      <h1 class="title">Hello world!</h1>
-      <h4 class="subtitle">Subtitle</h4>
-    </div>
+    <div id="projects" class="column columns is-multiline"></div>
   </section>
 
   <div id="footer-container"></div>
 
   <script src="./template/loader.ts"></script>
-  <script src="./main.ts"></script>
+  <script src="./assets/script/index.ts"></script>
 </body>
 
 </html>
