Add Pell editor

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -18,12 +18,12 @@
 
     <div class="column">
       <div id="new-project-button" class="block">
-        <button class="button is-info is-rounded">
+        <a href="/projects/new.html" class="button is-info is-rounded">
           <span>New project</span>
           <span class="icon">
             <i class="fas fa-plus"></i>
           </span>
-        </button>
+        </a>
       </div>
 
       <div id="projects" class="columns is-multiline"></div>
