--- a/portfolio/src/projects/new.html
+++ b/portfolio/src/projects/new.html
@@ -7,10 +7,48 @@
   <title>New project</title>
 
   <link rel="stylesheet" href="../assets/style/projects/new.scss">
+  <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>
 
 <body>
   <div id="nav-container"></div>
+
+  <div id="image-upload-modal" class="modal">
+    <div class="modal-background"></div>
+
+    <div class="modal-content">
+      <div class="box">
+        <button id="upload-modal-close" class="delete is-pulled-right" aria-label="close"></button>
+
+        <br>
+
+        <div class="field file is-centered is-boxed is-info">
+          <div class="control">
+            <label class="file-label">
+              <input class="file-input" type="file" accept="image/*">
+
+              <span class="file-cta">
+                <span class="file-icon">
+                  <i class="fas fa-upload"></i>
+                </span>
+
+                <span class="file-label">
+                  Choose a file
+                </span>
+              </span>
+
+              <span class="file-name is-hidden"></span>
+            </label>
+            <p class="help is-danger"></p>
+          </div>
+        </div>
+
+        <div class="field has-text-centered">
+          <button id="upload-modal-submit" class="block button is-link">Upload and add</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <section class="section columns p-4">
     <div id="sidebar-container" class="column is-2"></div>
@@ -45,6 +83,7 @@
 
   <script src="../template/loader.ts"></script>
   <script src="../assets/script/projects/new.ts"></script>
+  <script src="../../node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 </body>
 
 </html>
