More OOP (kinda)

--- a/portfolio/src/projects/new.html
+++ b/portfolio/src/projects/new.html
@@ -22,7 +22,7 @@
 
         <br>
 
-        <div class="field file is-centered is-boxed is-info">
+        <div class="field file is-centered is-boxed is-info has-name">
           <div class="control">
             <label class="file-label">
               <input class="file-input" type="file" accept="image/*">
@@ -37,7 +37,7 @@
                 </span>
               </span>
 
-              <span class="file-name is-hidden"></span>
+              <span class="file-name">Image file</span>
             </label>
             <p class="help is-danger"></p>
           </div>
