--- a/portfolio/src/projects/new.html
+++ b/portfolio/src/projects/new.html
@@ -33,7 +33,7 @@
                 </span>
 
                 <span class="file-label">
-                  Choose a file
+                  Choose an image
                 </span>
               </span>
 
@@ -58,21 +58,65 @@
 
       <form id="new-project-form" name="new-project" class="is-hidden">
         <div class="columns">
-          <div class="field column is-4">
-            <label for="name" class="label">Name</label>
-            <div class="control">
-              <input name="name" type="text" class="input">
+          <div class="column is-5">
+            <div class="field">
+              <label for="name" class="label">Name</label>
+              <div class="control">
+                <input name="name" type="text" class="input">
+              </div>
+            </div>
+
+            <div class="field">
+              <label for="description" class="label">Short description</label>
+              <div class="control">
+                <textarea name="description" rows="4" class="textarea"></textarea>
+              </div>
+            </div>
+
+            <div id="cover-image-field" class="field">
+              <label for="cover-image" class="label">Cover image</label>
+
+              <div class="file is-info has-name is-fullwidth">
+                <label class="file-label">
+                  <input name="cover-image" id="cover-image-input" class="file-input" type="file" accept="image/*">
+
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label">
+                      Choose an image
+                    </span>
+                  </span>
+                  <span class="file-name">
+                    Image file
+                  </span>
+                </label>
+              </div>
+
+              <p class="help is-danger"></p>
+            </div>
+
+            <div class="field">
+              <label for="site-url" class="label">Site URL</label>
+              <div class="control">
+                <input name="url" type="url" class="input">
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="field content">
-          <div id="pell-container" class="pell-editor"></div>
+        <div class="field">
+          <label class="label">Project body</label>
+
+          <div class="control content">
+            <div id="pell-container" class="pell-editor"></div>
+          </div>
         </div>
 
         <div class="field">
           <div class="control">
-            <button class="button is-link">Create project</button>
+            <button id="new-project-submit-btn" class="button is-link">Create project</button>
           </div>
         </div>
       </form>
