--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -13,43 +13,6 @@
 <body>
   <div id="nav-container"></div>
 
-  <div id="image-upload-modal" class="modal">
-    <div class="modal-background"></div>
-
-    <div class="modal-content">
-      <div class="box">
-        <button id="upload-modal-close" class="delete is-pulled-right" aria-label="close"></button>
-
-        <br>
-
-        <div class="field file is-centered is-boxed is-info has-name">
-          <div class="control">
-            <label class="file-label">
-              <input class="file-input" type="file" accept="image/*">
-
-              <span class="file-cta">
-                <span class="file-icon">
-                  <i class="fas fa-upload"></i>
-                </span>
-
-                <span class="file-label">
-                  Choose an image
-                </span>
-              </span>
-
-              <span class="file-name">Image file</span>
-            </label>
-            <p class="help is-danger"></p>
-          </div>
-        </div>
-
-        <div class="field has-text-centered">
-          <button id="upload-modal-submit" class="block button is-link">Upload and add</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <section class="section columns p-4">
     <div id="sidebar-container" class="column is-2"></div>
 
@@ -109,8 +72,8 @@
         <div class="field">
           <label class="label">Project body</label>
 
-          <div class="control content">
-            <div id="pell-container" class="pell-editor"></div>
+          <div class="control">
+            <textarea name="content" id="tinymce-editor"></textarea>
           </div>
         </div>
 
