--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -27,6 +27,8 @@
               <div class="control">
                 <input name="name" type="text" class="input">
               </div>
+
+              <p class="help is-danger"></p>
             </div>
 
             <div class="field">
@@ -34,6 +36,8 @@
               <div class="control">
                 <textarea name="description" rows="4" class="textarea"></textarea>
               </div>
+
+              <p class="help is-danger"></p>
             </div>
 
             <div id="cover-image-field" class="field">
@@ -41,7 +45,8 @@
 
               <div class="file is-info has-name is-fullwidth">
                 <label class="file-label">
-                  <input name="cover-image" id="cover-image-input" class="file-input" type="file" accept="image/*">
+                  <input name="cover" id="cover-image-input" class="file-input" type="file" accept="image/*"
+                    data-file-type="image">
 
                   <span class="file-cta">
                     <span class="file-icon">
@@ -65,6 +70,19 @@
               <div class="control">
                 <input name="url" type="url" class="input">
               </div>
+
+              <p class="help is-danger"></p>
+            </div>
+
+            <div class="field">
+              <label for="tags" class="label">Tags</label>
+              <div class="control">
+                <div id="tags-input-container" class="input">
+                  <input name="tags" type="text" class="input is-static tags-input">
+                </div>
+              </div>
+
+              <p class="help is-danger"></p>
             </div>
           </div>
         </div>
@@ -75,6 +93,8 @@
           <div class="control">
             <textarea name="content" id="tinymce-editor"></textarea>
           </div>
+
+          <p class="help is-danger"></p>
         </div>
 
         <div class="field">
