Add more metadata to projects

--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -66,9 +66,27 @@
             </div>
 
             <div class="field">
-              <label for="site-url" class="label">Site URL</label>
+              <label for="url" class="label">Site URL</label>
               <div class="control">
                 <input name="url" type="url" class="input">
+              </div>
+
+              <p class="help is-danger"></p>
+            </div>
+
+            <div class="field">
+              <label for="developmentStart" class="label">Development started</label>
+              <div class="control">
+                <input name="developmentStart" type="date" class="input">
+              </div>
+
+              <p class="help is-danger"></p>
+            </div>
+
+            <div class="field">
+              <label for="release" class="label">First release</label>
+              <div class="control">
+                <input name="release" type="date" class="input">
               </div>
 
               <p class="help is-danger"></p>
