--- a/src/index.html
+++ b/src/index.html
@@ -20,29 +20,17 @@
     <div class="column is-2">
       <aside class="menu">
         <p class="menu-label">
-          General
+          Sort by
         </p>
         <ul class="menu-list">
-          <li><a>Dashboard</a></li>
-          <li><a>Customers</a></li>
+          <li><a>Author's order</a></li>
+          <li><a>Development start</a></li>
+          <li><a>First release</a></li>
         </ul>
         <p class="menu-label">
-          Administration
+          Filter by tags
         </p>
-        <ul class="menu-list">
-          <li><a>Team Settings</a></li>
-          <li>
-            <a class="is-active">Manage Your Team</a>
-            <ul>
-              <li><a>Members</a></li>
-              <li><a>Plugins</a></li>
-              <li><a>Add a member</a></li>
-            </ul>
-          </li>
-          <li><a>Invitations</a></li>
-          <li><a>Cloud Storage Environment Settings</a></li>
-          <li><a>Authentication</a></li>
-        </ul>
+        <ul id="tag-filter-list" class="menu-list"></ul>
       </aside>
     </div>
 
