Add project sorting

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
         <p class="menu-label">
           Sort by
         </p>
-        <ul class="menu-list">
-          <li><a>Author's order</a></li>
-          <li><a>Development start</a></li>
-          <li><a>First release</a></li>
+        <ul id="order-field-list" class="menu-list">
+          <li data-field="priority" data-order="desc"><a>Author's order</a></li>
+          <li data-field="developmentStart" data-order="desc"><a>Development start</a></li>
+          <li data-field="release" data-order="desc"><a>First release</a></li>
         </ul>
         <p class="menu-label">
           Filter by tags
