--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -92,6 +92,15 @@
           </div>
 
           <div class="field">
+            <label for="priority" class="label">Priority (for custom sorting)</label>
+            <div class="control">
+              <input name="priority" type="number" min="0" value="0" class="input">
+            </div>
+
+            <p class="help is-danger"></p>
+          </div>
+
+          <div class="field">
             <label for="tags" class="label">Tags</label>
             <div class="control">
               <div id="tags-input-container" class="input">
