Add edit form and improve various form components

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="./assets/style/index.scss">
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
 
-  <!-- Parcel does not build asset if it is not referenced. Links to projects/project.html are not created until projects are loaded, thus Parcel does not find a reference at build time -->
+  <!-- Parcel does not build asset if it is not referenced. Links to projects/project.html and projects/edit.html are not created until projects are loaded, thus Parcel does not find a reference at build time -->
   <a href="./projects/project.html" style="display: none;"></a>
+  <a href="./projects/edit.html" style="display: none;"></a>
 </head>
 
 <body>
