--- a/src/projects/project.html
+++ b/src/projects/project.html
@@ -7,6 +7,7 @@
   <title>Portfolio | Project</title>
 
   <link rel="stylesheet" href="../assets/style/main.scss">
+  <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>
 
 <body>
@@ -20,6 +21,7 @@
 
   <script src="../template/loader.ts"></script>
   <script src="../assets/script/projects/projectPage.ts"></script>
+  <script src="../../node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 </body>
 
 </html>
