Add project deletion

--- a/src/projects/edit.html
+++ b/src/projects/edit.html
@@ -128,7 +128,7 @@
 
       <div class="field has-text-centered">
         <div class="control">
-          <button id="edit-project-submit-btn" class="button is-link">Edit project</button>
+          <button id="edit-project-submit-btn" class="button is-link">Save project</button>
         </div>
       </div>
     </form>
