Add default sort order

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           Sort by
         </p>
         <ul id="order-field-list" class="menu-list">
-          <li data-field="priority" data-order="desc"><a>Author's order</a></li>
+          <li data-field="priority" data-order="desc"><a id="default-sort" class="is-active">Author's order</a></li>
           <li data-field="developmentStart" data-order="desc"><a>Development start</a></li>
           <li data-field="release" data-order="desc"><a>First release</a></li>
         </ul>
