--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Projects</title>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon-32x32.png">
+
   <link rel="stylesheet" href="./assets/style/index.scss">
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
   <!-- Parcel does not build asset if it is not referenced. Links to projects/project.html and projects/edit.html are not created until projects are loaded, thus Parcel does not find a reference at build time -->
