--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New project</title>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/image/favicon-32x32.png">
+
   <link rel="stylesheet" href="../assets/style/projects/new.scss">
   <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
 </head>
