--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <div id="nav-container"></div>
 
   <section class="section columns p-4">
-    <div class="column is-2">
+    <div class="column is-3 is-2-desktop">
       <aside class="menu">
         <p class="menu-label">
           Sort by
