--- a/src/projects/edit.html
+++ b/src/projects/edit.html
@@ -18,7 +18,7 @@
   <section class="section p-4">
     <h1 class="title is-4 has-text-centered">Edit project</h1>
 
-    <h2 id="loader" class="subtitle has-text-centered">Loading form..</h2>
+    <div id="loader"></div>
 
     <form id="edit-project-form" name="edit-project" class="is-hidden">
       <div class="columns is-centered">
