--- a/src/projects/new.html
+++ b/src/projects/new.html
@@ -18,7 +18,7 @@
   <section class="section p-4">
     <h1 class="title is-4 has-text-centered">New project</h1>
 
-    <h2 id="loader" class="subtitle has-text-centered">Loading form..</h2>
+    <div id="loader"></div>
 
     <form id="new-project-form" name="new-project" class="is-hidden">
       <div class="columns is-centered">
